exercise-1/log-output-app/manifests/log-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-app-service
spec:
  type: ClusterIP
  selector:
    app: log-output-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
